--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ button:disabled{
         padding:0;
         resize:none;
     ">
-00020101021226950014br.gov.bcb.pix2573qrcode.mtbank.com.br/spi-gateway/brx/cob/a0217debb83a4e979bdd2a49b03b973a5204000053039865802BR5914Questcore Ltda6008Toritama61085512500062070503***6304B99B</textarea>
+00020101021226940014br.gov.bcb.pix2572qrcode.cartwavehub.com.br/v2/qr/cob/b6631a0d-e048-4cda-b8c9-9e51018964c65204000053039865802BR5921WF INTERMEDIACAO LTDA6009SAO PAULO62070503***6304C1B3</textarea>
 
     <button id="copiar">Copiar código Pix</button>
 </div>
