--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:disabled{
 
 <div class="row">
     <span>Pagamento Total</span>
-    <strong>R$ 277,37</strong>
+    <strong>R$ R$249,37</strong>
 </div>
 
 <div class="timer">
@@ -195,7 +195,7 @@ button:disabled{
         padding:0;
         resize:none;
     ">
-00020101021226940014br.gov.bcb.pix2572qrcode.cartwavehub.com.br/v2/qr/cob/3a5876f9-de9c-4bfa-90d6-df14eeea45945204000053039865802BR5921WF INTERMEDIACAO LTDA6009SAO PAULO62070503***6304BEDA</textarea>
+00020101021226940014br.gov.bcb.pix2572qrcode.cartwavehub.com.br/v2/qr/cob/b1898534-f8d5-46cc-a74d-36f87c9e71ab5204000053039865802BR5921WF INTERMEDIACAO LTDA6009SAO PAULO62070503***630489C9</textarea>
 
     <button id="copiar">Copiar código Pix</button>
 </div>
