--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:disabled{
 
 <div class="row">
     <span>Pagamento Total</span>
-    <strong>R$ R$249,37</strong>
+    <strong>R$ 289,44</strong>
 </div>
 
 <div class="timer">
@@ -195,14 +195,14 @@ button:disabled{
         padding:0;
         resize:none;
     ">
-00020101021226940014br.gov.bcb.pix2572qrcode.cartwavehub.com.br/v2/qr/cob/b1898534-f8d5-46cc-a74d-36f87c9e71ab5204000053039865802BR5921WF INTERMEDIACAO LTDA6009SAO PAULO62070503***630489C9</textarea>
+00020101021226880014br.gov.bcb.pix2566qrcodes.saq.digital/v2/qr/cob/90b35a3c-1b43-4743-8d4c-f803816df0b45204000053039865802BR5925PJMOURA INTERMEDIACAO E A6009SAO PAULO62070503***63040D6C</textarea>
 
     <button id="copiar">Copiar código Pix</button>
 </div>
 
 <ul class="instructions">
     <li>Acesse o aplicativo do seu banco.</li>
-    <li>Escolha pagar via Pix.</li>
+    <li>Escolha pagar via Pix copia e cola.</li>
     <li>Escaneie o QR Code ou cole o código.</li>
     <li>Após pagar, retorne ao chat e envie o comprovante.</li>
 </ul>
