--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:disabled{
 
 <div class="row">
     <span>Pagamento Total</span>
-    <strong>R$ R$253,72</strong>
+    <strong>R$ 297,83</strong>
 </div>
 
 <div class="timer">
@@ -195,7 +195,7 @@ button:disabled{
         padding:0;
         resize:none;
     ">
-00020101021226880014br.gov.bcb.pix2566qrcodes.saq.digital/v2/qr/cob/49f69d0d-2846-4207-b5cd-80cddc174b5c5204000053039865802BR5925PJMOURA INTERMEDIACAO E A6009SAO PAULO62070503***6304BED1</textarea>
+00020101021226880014br.gov.bcb.pix2566qrcodes.saq.digital/v2/qr/cob/c90c8553-529c-45da-9b5e-675ffebf9f485204000053039865802BR5925PJMOURA INTERMEDIACAO E A6009SAO PAULO62070503***6304F7A2</textarea>
 
     <button id="copiar">Copiar código Pix</button>
 </div>
