--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:disabled{
 
 <div class="row">
     <span>Pagamento Total</span>
-    <strong>R$ 297.83</strong>
+    <strong>R$ 273,47</strong>
 </div>
 
 <div class="timer">
@@ -194,8 +194,7 @@ button:disabled{
         border:0;
         padding:0;
         resize:none;
-    ">
-00020101021226880014br.gov.bcb.pix2566qrcodes.saq.digital/v2/qr/cob/9cf49f5a-e496-46ba-8818-559e22a99b695204000053039865802BR5925PJMOURA INTERMEDIACAO E A6009SAO PAULO62070503***630434C8</textarea>
+    ">00020101021226880014br.gov.bcb.pix2566qrcodes.saq.digital/v2/qr/cob/bc4ef5be-f1d4-4b1e-8aa2-5b3a56bdcbd55204000053039865802BR5925PJMOURA INTERMEDIACAO E A6009SAO PAULO62070503***630416F3</textarea>
 
     <button id="copiar">Copiar código Pix</button>
 </div>
